--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,11 @@
+#showall {
+  margin-left: 47%;
+}
+
+#message {
+  margin-left: 45%;
+}
+
 html, body {
   max-width: 100%;
   overflow-x: hidden;
